text align fix

--- a/projects/module/src/app/cumulative-slider/graph-bar/graph-bar.component.scss
+++ b/projects/module/src/app/cumulative-slider/graph-bar/graph-bar.component.scss
@@ -16,6 +16,7 @@
     height: 18px;
     padding: 0;
     opacity: .7;
+    text-align: start;
 }
 
 .graph-bar:hover {
